Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27777

Trying to open multiple files fails if one of them is broken

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 8.0.0-rc1
    • Qt Creator 8.0.0-beta2
    • Editors
    • macOS
    • 7899fd6fc4 (qt-creator/qt-creator/8.0) 7899fd6fc4 (qt-creator/tqtc-qt-creator/8.0)

      Steps to reproduce:

      Expected:

      • All Files are opened, showing error message where needed

      Actual:

      • Error message appears only once for one file, other files are not opened
      • When later opening a file successful and then closing it, the next error message appears for one of the broken files.

        For Gerrit Dashboard: QTCREATORBUG-27777
        # Subject Branch Project Status CR V

            davschul David Schulz
            madwinter Marcus Tillmanns
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes