Core: fix opening multiple broken Files

Fixes: QTCREATORBUG-27777
Change-Id: Ia606fe3b8a72ff32478002e3b3f672a4821fe115
Reviewed-by: Eike Ziller <eike.ziller@qt.io>