src/plugins/coreplugin/editormanager/editorview.cpp
@@ -407,8 +407,7 @@ void EditorView::openDroppedFiles(const QList<DropSupport::FileSpec> &files)
     };
     auto openEntry = [&](const DropSupport::FileSpec &spec) {
         if (first) {
-            first = false;
-            EditorManagerPrivate::openEditorAt(this, specToLink(spec));
+            first = !EditorManagerPrivate::openEditorAt(this, specToLink(spec));
         } else if (spec.column != -1 || spec.line != -1) {
             EditorManagerPrivate::openEditorAt(this,
                                                specToLink(spec),
